k8s/ingress/users-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-api
  namespace: users-api
  labels:
    app.kubernetes.io/name: users-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: cloud-native-kubernetes-platform
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - users-api.local
      secretName: users-api-tls
  rules:
    - host: users-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: users-api
                port:
                  number: 80
